--- a/GestaoLivraria/pom.xml
+++ b/GestaoLivraria/pom.xml
@@ -9,13 +9,27 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>25</maven.compiler.release>
         <exec.mainClass>com.mycompany.gestaolivraria.GestaoLivraria</exec.mainClass>
+        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
     </properties>
     <dependencies>
-        <!--  https://mvnrepository.com/artifact/com.mysql/mysql-connector-j  -->
+        <!--  [https://mvnrepository.com/artifact/com.mysql/mysql-connector-j](https://mvnrepository.com/artifact/com.mysql/mysql-connector-j)  -->
         <dependency>
             <groupId>com.mysql</groupId>
-                <artifactId>mysql-connector-j</artifactId>
+            <artifactId>mysql-connector-j</artifactId>
             <version>8.0.33</version>
         </dependency>
     </dependencies>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <release>25</release>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
